<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
    >

    <!-- ssid -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/ssid"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/et_ssid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/please_enter_ssid"
            />
    </LinearLayout>



    <!-- bssid -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/bssid"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/et_bssid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:hint="@string/please_enter_bssid"
            />

    </LinearLayout>

    <!-- spinner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/bssids"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <Spinner
            android:id="@+id/spinner"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            />

        <Button
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_select_bssid_randomly"
            />

        <ToggleButton
            android:id="@+id/tb_is_select_bssid_randomly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_config"
        />


</LinearLayout>